@@ -294,40 +294,12 @@ public class DataAccessRequestServiceTest {
         assertNotNull(dar);
     }
 
-    @Test
-    public void testDescribeDataAccessRequestManageV2() {
+    @Test(expected = IllegalArgumentException.class)
+    public void testDescribeDataAccessRequestManageV2_Admin() {
         User user = new User();
-        Integer genericId = 1;
-        DataAccessRequest dar = generateDataAccessRequest();
-        dar.setData(new DataAccessRequestData());
-        dar.addDatasetId(genericId);
-        when(dataAccessRequestDAO.findAllDataAccessRequests()).thenReturn(Collections.singletonList(dar));
-        when(dacService.filterDataAccessRequestsByDac(any(), any())).thenReturn(Collections.singletonList(dar));
-
-        Election e = new Election();
-        e.setReferenceId(dar.getReferenceId());
-        e.setElectionId(genericId);
-        when(electionDAO.findLastElectionsByReferenceIdsAndType(any(), any())).thenReturn(Collections.singletonList(e));
-
-        Vote v = new Vote();
-        v.setVoteId(genericId);
-        v.setElectionId(e.getElectionId());
-        when(voteDAO.findVotesByElectionIds(any())).thenReturn(Collections.singletonList(v));
-
-        Dac d = new Dac();
-        d.setDacId(genericId);
-        d.addDatasetId(genericId);
-        when(dacDAO.findDacsForDatasetIds(any())).thenReturn(Collections.singleton(d));
+        user.setRoles(List.of(new UserRole(UserRoles.ADMIN.getRoleId(), UserRoles.ADMIN.getRoleName())));
         initService();
-
-        List<DataAccessRequestManage> manages =  service.describeDataAccessRequestManageV2(user, UserRoles.ADMIN);
-        assertNotNull(manages);
-        assertFalse(manages.isEmpty());
-        assertEquals(dar.getReferenceId(), manages.get(0).getDar().getReferenceId());
-        assertEquals(1, manages.size());
-        assertEquals(e.getElectionId(), manages.get(0).getElection().getElectionId());
-        assertEquals(d.getDacId(), manages.get(0).getDac().getDacId());
-        assertFalse(manages.get(0).getVotes().isEmpty());
+        service.describeDataAccessRequestManageV2(user, UserRoles.ADMIN);
     }
 
     @Test
@@ -378,41 +350,12 @@ public class DataAccessRequestServiceTest {
         service.describeDataAccessRequestManageV2(user, UserRoles.SIGNINGOFFICIAL);
     }
 
-    @Test
+    @Test(expected = IllegalArgumentException.class)
     public void testDescribeDataAccessRequestManageV2_Researcher() {
         User user = new User();
-        user.setRoles(Arrays.asList(new UserRole(5, UserRoles.RESEARCHER.getRoleName())));
-
-        Integer genericId = 1;
-        DataAccessRequest dar = generateDataAccessRequest();
-        dar.setData(new DataAccessRequestData());
-        dar.addDatasetId(genericId);
-        when(dataAccessRequestDAO.findAllDarsByUserId(any())).thenReturn(Collections.singletonList(dar));
-
-        Election e = new Election();
-        e.setReferenceId(dar.getReferenceId());
-        e.setElectionId(genericId);
-        when(electionDAO.findLastElectionsByReferenceIdsAndType(any(), any())).thenReturn(Collections.singletonList(e));
-
-        Vote v = new Vote();
-        v.setVoteId(genericId);
-        v.setElectionId(e.getElectionId());
-        when(voteDAO.findVotesByElectionIds(any())).thenReturn(Collections.singletonList(v));
-
-        Dac d = new Dac();
-        d.setDacId(genericId);
-        d.addDatasetId(genericId);
-        when(dacDAO.findDacsForDatasetIds(any())).thenReturn(Collections.singleton(d));
+        user.setRoles(List.of(new UserRole(UserRoles.RESEARCHER.getRoleId(), UserRoles.RESEARCHER.getRoleName())));
         initService();
-
-        List<DataAccessRequestManage> manages =  service.describeDataAccessRequestManageV2(user, UserRoles.RESEARCHER);
-        assertNotNull(manages);
-        assertFalse(manages.isEmpty());
-        assertEquals(dar.getReferenceId(), manages.get(0).getDar().getReferenceId());
-        assertEquals(1, manages.size());
-        assertEquals(e.getElectionId(), manages.get(0).getElection().getElectionId());
-        assertEquals(d.getDacId(), manages.get(0).getDac().getDacId());
-        assertFalse(manages.get(0).getVotes().isEmpty());
+        service.describeDataAccessRequestManageV2(user, UserRoles.RESEARCHER);
     }
 
     @Test(expected = IllegalArgumentException.class)
